@@ -11,6 +11,10 @@ Package author: Igor Gaponenko
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-00-05
+2015-07-13 Igor Gaponenko
+- minor changes in the Displayselector widgt and its test
+
 Tag: V00-00-04
 2015-07-13 Igor Gaponenko
 - major refactoring to prepare for multi-display (plot) support
